...
    <string name="drawer_close">Close</string>
    <string name="downChalet">Downloading Chalets</string>
    <string name="wait">Please wait</string>

    <!-- Strings related to Settings -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="userType">Who are you?</string>
    <string name="afterSignup">Kindly login with your email/password</string>
    <string name="bookVistor">Kindly login to reserve this chalet</string>

    <!-- Error messages -->
    <string name="erVerifyPassword">Password not match</string>
...
        <item>This day is not available</item>
        <item>Low customer rating </item>
    </string-array>


    <string name="owner">Owner</string>
    <string name="chaletOwner">Rest-house/Chalet owner</string>
    <string name="chaletName">Chalet Name</string>
    <string name="promotion">Promotion</string>
    <string name="newChalet">Add a new chalet</string>
    <string name="mapView">Show By Maps</string>
    <string name="doneUpload">Upload successfully!</string>
    <string name="promot">ALMORTAH team will keep the promoted rest-house and chalet always in
...
